--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
     </nav> 
     <section>
         <div id="Profile">나의 사진<br>
-           <img src="./images/내사진.JPG" alt="">
+           <img src="./images/bigdata.jpg" alt="">
            <h2>좋아하는 음악</h2>
-           <audio src="./media/디즌.mp3" controls>
+           <audio src="./media/music01.mp3" controls>
             지원하지 않는 브라우저 입니다. 
         </audio>
             <h2 style="font-size: x-large; color: indigo;">북금곰을 살려요~~</h2>
