geolocation sample file 2

--- a/geo.html
+++ b/geo.html
@@ -23,7 +23,7 @@
           let long = position.coords.longitude;
           
           var options = {
-			center: new kakao.maps.LatLng(35.907757, 127.766922),
+			center: new kakao.maps.LatLng(lat, long),
 			level: 3
 		};
 
